--- a/src/App.scss
+++ b/src/App.scss
@@ -3,14 +3,20 @@ $primary-color: #ffd700;
 @import 'animate.css';
 
 @font-face {
+  font-family: 'ViceCitySans';
+  src: url('./assets/fonts/ViceCitySans.otf') format('opentype');
+}
+
+@font-face {
   font-family: 'Helvetica Neue';
-  src: url('/assets/fonts/Helvetica-nue.ttf') format('ttf');
+  src: url('./assets/fonts/Helvetica-nue.ttf') format('ttf');
 }
 
 @font-face {
   font-family: 'Coolvetica';
-  src: url('/assets/fonts/coolvetica-condensed-rg.ttf') format('ttf');
+  src: url('./assets/fonts/coolvetica-condensed-rg.ttf') format('ttf');
 }
+
 
 input,
 textarea {
