--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -26,13 +26,14 @@ video{
 
     h1 {
         color: #dda132;
-        font-size: 100px;
+        font-size: 10rem;
         margin-top: 100px;
     }
         p{
             color: #dda132;
-            font-size: 50px;
+            font-size: 5rem;
             margin-top: -50px;
+            text-align: center;
 
         }
 }
