--- a/src/components/Home/Customize/index.scss
+++ b/src/components/Home/Customize/index.scss
@@ -19,19 +19,15 @@
 }
 .customize-wrapper {
     display: flex;
-    padding-top: 80px;
+    padding-top: 6em;
+    gap: 5em;
 }
-.left-column{
-    padding-right: 90px;
     
-}
-.customize-right-column{
-    margin-top: -30px;
-}
 .customize-icons {
     display: flex;
-    margin-left: 61px;
+    justify-content: center;
         img{
+            
             margin-right: 40px;
             margin-bottom: 10px;
             -webkit-filter: drop-shadow(8px 10px 1px #16071050);
@@ -44,13 +40,12 @@
     display: flex;
     text-align: left;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     
 
     
         img{
-            flex: 0 0 0;
+            flex: 0 0 auto;
             width: auto;
             -webkit-filter: drop-shadow(10px 13px 1px #16071050);
             filter:         drop-shadow(10px 13px 1px #16071050);
@@ -84,16 +79,187 @@
 
 }
 .Customizer-menu{
-    display: block;
-    justify-content: center;
-    position: relative;
+    display: flex;
+    padding: 0;
+    margin: 0;
     -webkit-filter: drop-shadow(10px 13px 1px #16071050);
     filter:         drop-shadow(10px 13px 1px #16071050);
     
         img{
-            width: 120%;
-            height: 120%;
-            flex: 0 0 0;
+
+            min-width: 120%;
+            
+            
             
         }
     }
+
+    @media (max-width: 70em){
+        .customize-box {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            height: 900px;
+        
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height: calc(100% + 70px);
+                        background: 
+                        linear-gradient(to left, #02002425 1%, #ffffff00 15%),
+                        linear-gradient(to right, #02002425 1%, #ffffff00 15%),
+                        linear-gradient(to top, #362931, #422b2f);
+                        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+            }
+        
+        }        
+        
+        
+        
+        .customize-wrapper{
+        flex-direction: column;
+        
+        padding-top: 50px;
+        gap: 0em;
+        }
+
+        .customize-right-column{
+            display: flex;
+        }
+    
+    .Customizer-menu{
+        display: flex;
+        position: relative;
+        width: 35rem;
+        -webkit-filter: drop-shadow(10px 13px 1px #16071050);
+        filter:         drop-shadow(10px 13px 1px #16071050);
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        flex: 1 1 auto; 
+        padding: 10px;
+        margin: 10px;
+
+            img{
+                min-width: 100%;
+            }
+        }
+
+    
+
+    .customize-card {
+        display: flex;
+        text-align: left;
+        flex-direction: column;
+    
+        
+            img{
+                flex: 0 0 auto;
+                max-width: 100%;
+                -webkit-filter: drop-shadow(10px 13px 1px #16071050);
+                filter:         drop-shadow(10px 13px 1px #16071050);
+    
+            }
+            h1{
+                margin-top: 15px;
+                position: absolute;
+                padding-left: 10px;
+                font-size: 36px;
+                font-family:'ViceCitySans' ;
+                color: #691630;
+        
+            }
+            .text-body{
+                flex-direction: column;
+                margin-top: 75px;
+                position: absolute;
+                padding-left: 30px;
+            p{
+                font-family: 'ViceCitySans';
+                color: #691630;
+                font-size: 18px;
+                font-size: 18px;
+                width: 440px;
+                
+        }
+    }
+        }
+    }
+
+    @media (max-width: 600px){
+        .customize-card {
+            display: flex;
+            text-align: left;
+            flex-direction: column;
+            -webkit-box-flex: 1;
+            -moz-box-flex: 1;
+            box-flex: 1;
+            -webkit-flex: 1 1 auto;
+            flex: 1 1 auto; 
+            padding: 10px;
+            margin: 10px;
+        
+            
+                img{
+                    flex: 0 0 auto;
+                    max-width: 100%;
+                    -webkit-filter: drop-shadow(10px 13px 1px #16071050);
+                    filter:         drop-shadow(10px 13px 1px #16071050);
+        
+                }
+                h1{
+                    margin-top: 15px;
+                    position: absolute;
+                    padding-left: 10px;
+                    font-size: 36px;
+                    font-size: 6vw;
+                    font-stretch: 1;
+                    max-width: 100%;
+                    font-family:'ViceCitySans' ;
+                    color: #691630;
+            
+                }
+                .text-body{
+                    flex-direction: column;
+                    // gap: 2em;
+                    position: absolute;
+                    margin-left: 50px;
+                    padding-left: 0rem;
+                    margin-top: 60px;
+                    width: 80%;
+                    text-align: left;
+                p{
+                    font-family: 'ViceCitySans';
+                    color: #691630;
+                    font-size: 18px;
+                    font-size: 3vw;
+                    width: 100%;
+                    
+                    
+                    
+            }
+        }
+    }
+    .Customizer-menu{
+        display: flex;
+        position: relative;
+        width: 35rem;
+        -webkit-filter: drop-shadow(10px 13px 1px #16071050);
+        filter:         drop-shadow(10px 13px 1px #16071050);
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        flex: 1 1 auto; 
+        padding: 10px;
+        margin: 10px;
+
+            img{
+                padding-left: 0rem;
+                min-width: 80%;
+            }
+        }
+
+}
