--- a/src/components/Home/Socialize/index.scss
+++ b/src/components/Home/Socialize/index.scss
@@ -3,6 +3,9 @@
     display: flex;
     justify-content: center;
     height: 630px;
+    border-bottom: 10px #27282d;
+    border-style: none none solid none;
+    
 
             &::before {
                 content: '';
@@ -13,7 +16,7 @@
                 background: 
                 linear-gradient(to left, #02002425 1%, #ffffff00 15%),
                 linear-gradient(to right, #02002425 1%, #ffffff00 15%),
-                url(./../../../assets//images/cloud_background.png);
+                url('./../../../assets//images/cloud_background.png');
                 clip-path: polygon(0% 7%, 100% 0%, 100% 100%, 0% 100%);
     }
 
@@ -21,15 +24,15 @@
 .socialize-wrapper {
     display: flex;
     padding-top: 90px;
+    gap: 5rem;
 }
 .socialize-left-column{
-    padding-right: 90px;
     
 
 }
 .socialize-icons {
     display: flex;
-    margin-left: 61px;
+    justify-content: center;
         img{
             margin-right: 40px;
             margin-bottom: 10px;
@@ -94,3 +97,113 @@
             
         }
     }
+
+    @media (max-width: 70em){
+
+        .socialize-container {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            height: 1000px;
+            // border-bottom: 10px #27282d;
+            // border-style: none none solid none;
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        top: -35px;
+                        width: 100%;
+                        height: calc(100% + 50px);
+                        background: 
+                        linear-gradient(to left, #02002425 1%, #ffffff00 15%),
+                        linear-gradient(to right, #02002425 1%, #ffffff00 15%),
+                        url('./../../../assets//images/cloud_background.png');
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        clip-path: polygon(0% 5%, 100% 0%, 100% 100%, 0% 100%);
+                        border-bottom: 10px #27282d;
+                        border-style: none none solid none;
+            }
+        
+        }
+
+        .socialize-wrapper {
+            display: flex;
+            padding-top: 70px;
+            flex-direction: column;
+
+    }
+
+    .socialize-content{
+        padding: 0;
+        text-align: center;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        flex: 1 1 auto; 
+        padding: 10px;
+        margin: 10px;
+        
+        
+        img{
+            max-width: 100%;
+            // flex: 1;
+        }
+    }
+}
+
+@media (max-width: 600px){
+    .socialize-card {
+        display: flex;
+        text-align: left;
+        flex-direction: column;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        flex: 1 1 auto; 
+        padding: 10px;
+        margin: 10px;
+    
+        
+            img{
+                flex: 0 0 auto;
+                max-width: 100%;
+                -webkit-filter: drop-shadow(10px 13px 1px #16071050);
+                filter:         drop-shadow(10px 13px 1px #16071050);
+    
+            }
+            h1{
+                margin-top: 15px;
+                position: absolute;
+                padding-left: 10px;
+                font-size: 36px;
+                font-size: 6vw;
+                font-stretch: 1;
+                max-width: 100%;
+                font-family:'ViceCitySans' ;
+                color: #691630;
+        
+            }
+            .socialize-text-body{
+                flex-direction: column;
+                // gap: 2em;
+                position: absolute;
+                margin-left: 50px;
+                padding-left: 0rem;
+                margin-top: 60px;
+                width: 80%;
+                text-align: left;
+            p{
+                font-family: 'ViceCitySans';
+                color: #691630;
+                font-size: 18px;
+                font-size: 3vw;
+                width: 100%;
+                
+                
+                
+            }
+        }
+    }
+}
