--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,104 +1,332 @@
-.nav-bar {
-    background: url(../../assets/images/nav_deco.png) right no-repeat;
-    background-size: auto 65px;
-    background-position: right;
-    background-color: #2f3739;
-    border-bottom: 5px #27282d;
-    border-style: none none solid none;
-    display: flex;
-    align-items: left;
-    position: fixed;
-    width: 100%;
-    height: 67px;
-    padding: 0rem 0rem;
-    margin: 0;
-    z-index: 3;
-    overflow: visible;
+// .nav-bar {
+//     background: url('../../assets/images/nav_deco.png') right no-repeat;
+//     background-size: auto 65px;
+//     background-position: right;
+//     background-color: #2f3739;
+//     border-bottom: 5px #27282d;
+//     border-style: none none solid none;
+//     display: flex;
+//     align-items: left;
+//     position: fixed;
+//     width: 100%;
+//     height: 67px;
+//     padding: 0rem 0rem;
+//     margin: 0;
+//     z-index: 3;
+//     overflow: visible;
     
 
-        //Nav Logo    
-        .logo {
-            position: relative;
-            margin-left: 150px;
-            max-width: 100%;
-            margin-top: -85px;
-        }
-        .logo-hover {
-            position: absolute;
-            margin-top: 25px;
-            margin-left: 25px;
-            top: 0;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            object-fit: contain;
-            opacity: 0;
-            transition: opacity .2s;
+//         //Nav Logo    
+//         .logo {
+//             position: relative;
+//             margin-left: 150px;
+//             max-width: 100%;
+//             margin-top: -85px;
+//         }
+//         .logo-hover {
+//             position: absolute;
+//             margin-top: 25px;
+//             margin-left: 25px;
+//             top: 0;
+//             right: 0;
+//             left: 0;
+//             bottom: 0;
+//             object-fit: contain;
+//             opacity: 0;
+//             transition: opacity .2s;
 
-                &:hover {
-                    opacity: 1;
-                }
-        }
+//                 &:hover {
+//                     opacity: 1;
+//                 }
+//         }
 
-        // .figure:hover img.logo-hover {
-        //     opacity: 1;
-        // }
+// @media (min-width: 35em) {
+//     .nav-bar {
+//         position: fixed;
+//         inset: 0 30 0 0;
+//         background: black;
+//     }
+// }
 
-    //HOME ABOUT US CONTACT 
-    nav {
-        order: 2;
-        text-align: center;
-        height: auto;
-        margin-top: 10px;
-        text-decoration: none;
-        list-style-type: none;
-        margin: 0;
-        margin-left: auto;
+//     //HOME ABOUT US CONTACT 
+//     nav {
+//         order: 2;
+//         text-align: center;
+//         height: auto;
+//         margin-top: 10px;
+//         text-decoration: none;
+//         list-style-type: none;
+//         margin: 0;
+//         margin-left: auto;
+//     }
+//         //individual Elements
+//         a {
+//             font-size: 22px;
+//             color: #2f3739;
+//             display: inline-block;
+//             line-height: 15px;
+//             padding: 25px;
+//             height: 20px;
+//             text-decoration: none;
+
+//             &:hover{
+//                 color: #ffffff;
+//             }
+//         }
+        
+//     //Socials
+//     ul {
+//         display: inline-block;
+//         list-style-type: none;
+//         float: none;
+//         text-align: left;
+//         margin: 0;
+//         min-width: 20px;
+//         list-style-type: none;
+    
+//         li{
+//             //individual elements
+//             a{
+            
+//                 padding: 25px 0;
+//                 font-size: 22px;
+//                 line-height: 10px;
+                
+//                 svg{
+
+//                     &:hover {
+//                     color:#dda132;
+
+//                 }
+//                 }
+//             }
+//         }
+// }
+
+// }
+
+
+// .logo {
+//                     position: relative;
+//                     margin-left: 150px;
+//                     max-width: 100%;
+//                     margin-top: -85px;
+//                 }
+//                 .logo-hover {
+//                     position: absolute;
+//                     margin-top: 25px;
+//                     margin-left: 25px;
+//                     top: 0;
+//                     right: 0;
+//                     left: 0;
+//                     bottom: 0;
+//                     object-fit: contain;
+//                     opacity: 0;
+//                     transition: opacity .2s;
+        
+//                         &:hover {
+//                             opacity: 1;
+//                         }
+//                 }
+
+.logo {
+    display: flex;
+    position: relative;
+    margin: 4rem;
+    .logo-hover {
+                position: absolute;
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                object-fit: contain;
+                opacity: 0;
+                transition: opacity .2s;
+    
+                    &:hover {
+                        opacity: 1;
+                    }
     }
-        //individual Elements
-        a {
-            font-size: 22px;
-            color: #2f3739;
-            display: inline-block;
-            line-height: 15px;
-            padding: 25px;
-            height: 20px;
+    
+}
+
+.primary-header {
+    display: flex;
+    background: url('../../assets/images/nav_deco.png') right no-repeat;
+    background-size: auto 62px;
+    background-color: #2f3739;
+    width: 100%;
+    // min-width: 1400px;
+    position: fixed;
+    align-items: center;
+    margin-left: auto;
+    height: 62px;
+    border-bottom: 5px #27282d;
+    border-style: none none solid none;
+    z-index: 9;
+    
+}
+
+nav{
+    display: flex;
+    margin-left: auto;
+    order: 1;
+}
+
+.primary-nav {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 45px;
+    gap: 40px;
+        a {  
+            list-style: none;
             text-decoration: none;
+            font-size: 22px;
+            font-family: 'ViceCitySans';
+            color: #2f3739;
 
             &:hover{
                 color: #ffffff;
             }
-        }
-        
-    //Socials
-    ul {
-        display: inline-block;
-        list-style-type: none;
-        float: none;
-        text-align: left;
-        margin: 0;
-        min-width: 20px;
-        list-style-type: none;
-    
-        li{
-            //individual elements
-            a{
-            
-                padding: 25px 0;
-                font-size: 22px;
-                line-height: 10px;
-                
+    }
+}
+.mobile-nav-toggle {
+    display: none;
+}
+
+
+.social-nav{
+        display: flex;
+        gap: 40px;
+        align-items: center;
+        ul{ 
+            margin-left: -20px;
+            padding: 0;
+            list-style: none;
+            font-size: 30px;
+            justify-self: flex-start;
+            text-decoration: none;
                 svg{
-
                     &:hover {
-                    color:#dda132;
-
+                        color:#dda132;
+                    }
                 }
-                }
-            }
         }
 }
 
+.social-description {
+    display: none;
+}
+
+@media (max-width: 70em) {
+
+    .logo {
+        content:url('./../../assets/images/lightestone_logo.png');
+        flex-direction: row;
+        width: 15rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 1rem;
+        
+        
+        
+  }
+
+  
+    .primary-header {
+        position: fixed;
+        min-height: 400px;
+        background: #2f3739;
+        flex-direction: column;
+        z-index: 98;
+        transform: translateY(-100%);
+
+
+    }
+    nav{
+    flex: 1;
+    margin: 0;
+    
+    }
+    .expanded.primary-header {
+        position: fixed;
+        transform: translateY(0%);
+        transition: transform 300ms ease-in-out;
+        // transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+
+    }
+    
+    
+.primary-nav {
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 3rem;
+            a { 
+                padding-left: 5rem;
+                list-style: none;
+                text-decoration: none;
+                text-align: center;
+                font-size: 22px;
+                font-family: 'ViceCitySans';
+                color: #eedfd0;
+    
+                &:hover{
+                    color: #ffffff;
+                }
+        }
+    }
+
+    .social-description {
+        display: block;
+        position: absolute;
+        top: 15em;
+        align-items: center;
+        font-family: 'ViceCitySans';
+        color: #dda132;
+        font-size: 20px;
+        padding: 0;
+        
+    }
+    
+    .social-nav{
+            gap: 50px;
+            padding-right: 2rem;
+            order: 1;
+            ul{ 
+                
+                padding-left: 5rem;
+                list-style: none;
+                font-size: 30px;
+                text-decoration: none;
+                
+                
+                    svg{
+                        &:hover {
+                            color:#dda132;
+                        }
+                    }
+            }
+    }
+
+    .mobile-nav-toggle {
+        background: url('./../../assets//images/bars-solid.svg');
+        background-repeat: no-repeat;
+        background-color: transparent;
+        display: block;
+        border: none;
+        position: fixed;
+        z-index: 99;
+        aspect-ratio: 1;
+        width: 4rem;
+        top: 2rem;
+        right: 2rem;
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    }
+    .mobile-nav-toggle[aria-expanded= true] {
+        background-image: url('./../../assets/images/x-solid.svg');
+    }
 }
 
 
