--- a/src/components/Home/Preview/Reusable/index.scss
+++ b/src/components/Home/Preview/Reusable/index.scss
@@ -1,47 +1,8 @@
-
-.slider {
-    position: relative;
-    overflow: hidden;
-    height: 100vh;
-}
-
-.slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+.carousel-container {
     height: 100%;
-    opacity: 0;
-    transform: opacity .04s ease-in-out;
+    width: 100%;
+    position: relative;
+    
 }
 
-button#next {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-}
-button#prev {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-}
 
-.slide.current {
-    opacity: 1;
-}
-// Slide Images
-.slide:first-child{
-    background: url('./image-1.png') no-repeat center center/cover;
-}
-.slide:nth-child(2){
-    background: url('./image-2.png') no-repeat center top/cover;
-}
-.slide:nth-child(3){
-    background: url('./image-3.png') no-repeat center top/cover;
-}
-.slide:nth-child(4){
-    background: url('./image-1.png') no-repeat center top/cover;
-}
-.slide:nth-child(5){
-    background: url('./image-1.png') no-repeat center top/cover;
-}
