--- a/src/components/Home/Socialize/index.scss
+++ b/src/components/Home/Socialize/index.scss
@@ -60,25 +60,24 @@
         }
 
         h1{
-            margin-top: 15px;
+            margin-top: 1.5rem;
             position: absolute;
-            padding-left: 10px;
-            font-size: 36px;
+            padding-left: 1rem;
+            font-size: 3.6rem;
             font-family:'ViceCitySans' ;
             color: #7b2644;
     
         }
         .socialize-text-body{
             flex-direction: column;
-            margin-top: 75px;
+            margin-top: 7.5rem;
             position: absolute;
-            padding-left: 30px;
+            padding-left: 3rem;
         p{
             font-family: 'ViceCitySans';
             color: #7b2644;
-            font-size: 18px;
-            font-size: 18px;
-            width: 440px;
+            font-size: 1.8rem;
+            width: 44rem;
             
     }
 }
@@ -104,7 +103,7 @@
             position: relative;
             display: flex;
             justify-content: center;
-            height: 1000px;
+            height: 100rem;
             // border-bottom: 10px #27282d;
             // border-style: none none solid none;
                     &::before {
@@ -128,7 +127,7 @@
 
         .socialize-wrapper {
             display: flex;
-            padding-top: 70px;
+            padding-top: 7rem;
             flex-direction: column;
 
     }
@@ -141,8 +140,8 @@
         box-flex: 1;
         -webkit-flex: 1 1 auto;
         flex: 1 1 auto; 
-        padding: 10px;
-        margin: 10px;
+        padding: 1rem;
+        margin: 1rem;
         
         
         img{
@@ -152,7 +151,7 @@
     }
 }
 
-@media (max-width: 600px){
+@media (max-width: 40rem){
     .socialize-card {
         display: flex;
         text-align: left;
@@ -177,9 +176,8 @@
                 margin-top: 15px;
                 position: absolute;
                 padding-left: 10px;
-                font-size: 36px;
-                font-size: 6vw;
-                font-stretch: 1;
+                font-size: 3.6rem;
+                // font-size: 6vw;
                 max-width: 100%;
                 font-family:'ViceCitySans' ;
                 color: #691630;
@@ -189,7 +187,7 @@
                 flex-direction: column;
                 // gap: 2em;
                 position: absolute;
-                margin-left: 50px;
+                margin-left: 3rem;
                 padding-left: 0rem;
                 margin-top: 60px;
                 width: 80%;
@@ -197,8 +195,8 @@
             p{
                 font-family: 'ViceCitySans';
                 color: #691630;
-                font-size: 18px;
-                font-size: 3vw;
+                font-size: 1.6rem;
+                // font-size: 3vw;
                 width: 100%;
                 
                 
