--- a/src/components/Home/Tame/index.scss
+++ b/src/components/Home/Tame/index.scss
@@ -155,7 +155,7 @@
     @media (max-width: 600px){
         .container-Tame {
             position: relative;
-            height: 100vh;
+            height: 90rem;
             display: flex;
             justify-content: center;
         }
